tests/negative/regression/r16.orng
// r16.orng:6:6: error: expected a value of type `Int`
//     & mut ? if & mut [ ] & ? { } { }
//     ^
// 
fn main ( ) -> Int { 
    & mut ? if & mut [ ] & ? { } { }
} 